fixed margin spacing for Google search and label

--- a/public/main.css
+++ b/public/main.css
@@ -688,9 +688,14 @@ footer a {
     font-size: 1.5rem;
   }
   
+  .search-container {
+    width: 90%;
+    margin: 0px auto;
+  }
+
   main p {
     text-align: left;
-    margin: 20px 0px 0px 50px;
+    margin: 0px;
     font-size: 1.2rem;
   }
 
@@ -719,7 +724,7 @@ footer a {
 
   #pac-input {
     width: 500px;
-    margin: 50px 0px 50px 50px;
+    margin: 50px 0px 20px 0px;
     font-size: 18px;
   }
 
